--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/orm-pack": "^2.0",
+        "symfony/security-bundle": "5.1.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
