--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-index:
-   path: /main
-   controller: App\Controller\MainController::index
+# index:
+#    path: /main
+#    controller: App\Controller\MainController::index
