--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "phpunit/phpunit": "9",
         "symfony/debug-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.20",
+        "symfony/phpunit-bridge": "^5.1",
         "symfony/test-pack": "^1.0"
     },
     "config": {
