--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "phpunit/phpunit": "9",
+        "symfony/browser-kit": "5.1.*",
+        "symfony/css-selector": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.20",
         "symfony/phpunit-bridge": "^5.1",
