--- a/composer.json
+++ b/composer.json
@@ -5,29 +5,22 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.10",
-        "squizlabs/php_codesniffer": "*",
+        "doctrine/doctrine-migrations-bundle": "dev-master",
         "symfony/console": "5.1.*",
+        "symfony/debug-bundle": "*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/orm-pack": "^2.0",
+        "symfony/maker-bundle": "*",
         "symfony/security-bundle": "5.1.*",
-        "symfony/twig-pack": "^1.0",
+        "symfony/twig-bundle": "*",
+        "symfony/twig-pack": "*",
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "dama/doctrine-test-bundle": "^6.3",
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "phpunit/phpunit": "9",
-        "symfony/browser-kit": "5.1.*",
-        "symfony/css-selector": "5.1.*",
-        "symfony/debug-bundle": "5.1.*",
-        "symfony/maker-bundle": "^1.20",
-        "symfony/phpunit-bridge": "^5.1",
-        "symfony/test-pack": "^1.0"
+        "doctrine/doctrine-fixtures-bundle": "*"
     },
     "config": {
         "optimize-autoloader": true,
