--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "dev-master",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
         "symfony/debug-bundle": "*",
         "symfony/dotenv": "5.1.*",
@@ -20,7 +21,11 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "*"
+        "dama/doctrine-test-bundle": "^6.3",
+        "doctrine/doctrine-fixtures-bundle": "*",
+        "symfony/browser-kit": "^5.1",
+        "symfony/css-selector": "^5.1",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
