--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "doctrine/doctrine-fixtures-bundle": "*",
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
-        "symfony/phpunit-bridge": "^5.1"
+        "symfony/phpunit-bridge": "^5.1",
+        "symfony/test-pack": "*"
     },
     "config": {
         "optimize-autoloader": true,
