--- a/composer.json
+++ b/composer.json
@@ -5,28 +5,19 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-migrations-bundle": "dev-master",
-        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
-        "symfony/debug-bundle": "*",
         "symfony/dotenv": "5.1.*",
+        "symfony/finder": "5.1.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/maker-bundle": "*",
         "symfony/security-bundle": "5.1.*",
-        "symfony/twig-bundle": "*",
-        "symfony/twig-pack": "*",
-        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "dama/doctrine-test-bundle": "^6.3",
-        "doctrine/doctrine-fixtures-bundle": "*",
-        "symfony/browser-kit": "^5.1",
-        "symfony/css-selector": "^5.1",
-        "symfony/phpunit-bridge": "^5.1",
-        "symfony/test-pack": "*"
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "phpunit/phpunit": "^9.3",
+        "squizlabs/php_codesniffer": "3.*",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
