--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/security-bundle": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/validator": "5.1.*",
+        "symfony/yaml": "5.1.*",
+        "symfony/orm-pack": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "phpunit/phpunit": "^9.3",
+        "phpunit/phpunit": "8.3.5",
         "squizlabs/php_codesniffer": "3.*",
         "symfony/phpunit-bridge": "^5.1"
     },
