--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         "symfony/finder": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/orm-pack": "*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*",
-        "symfony/orm-pack": "*"
+        "symfony/yaml": "5.1.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
