--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,11 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/browser-kit": "5.1.*",
         "symfony/debug-pack": "^1.0",
-        "symfony/maker-bundle": "^1.23"
+        "symfony/maker-bundle": "^1.23",
+        "symfony/phpunit-bridge": "^5.1",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
